Corregido estructura y nombre de variables

--- a/src/index.html
+++ b/src/index.html
@@ -1,248 +1,137 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Hello Rigo with Vanilla.js</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
+	<script src="./js/index.js"></script>
+</head>
+<body>
+	<div class="container-fluid text-center">
+		<form id="form-submit">
+			<div class="row justify-content-center">
+				<div class="column">
+					<div class="card m-5" style="width: 45rem; height: auto">
+						<div class="card-header">
+							<h3>Payment for example</h3>
+						</div>
+						<!-- Principal body -->
+						<div class="card-body">
+							<!-- Alert! -->
+							<div class="alert alert-danger" role="alert" style="display: none" id="error">
+								Some fields are missing! Check it out all the fields
+							</div>
+							<div class="alert alert-success" role="alert" style="display: none" id="success">
+								Completed!
+							</div>
+							<!-- Forms -->
+							<div class="form-row">
+								<div class="form-group col-md-6">
+									<label for="cardNumber">CARD #</label>
+									<input type="text" class="form-control" id="cardNumber" placeholder="0000 0000 0000 0000" maxlength="16" minlength="16" pattern="[0-9]{16}" value=""/>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label>CVC #</label>
+                                    <input type="number" class="form-control" id="inputCVV" placeholder="000" maxlength="3" minlength="3" value=""/>
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label for="inputAmount">Amount</label>
+                                    <div class="input-group">
+                                    <span class="input-group-addon mr-1"><b>$</b></span>
+                                    <input type="text" class="form-control" placeholder="0.00" id="imputAmount" pattern="^\d*(\.\d{0,2})?$" value=""/>
+                                    </div>
+                                </div>
+                            </div>
+							<div class="form-row">
+								<div class="form-group col-md-6">
+									<label for="first-name">First Name</label>
+									<input type="text" id="first-name" class="form-control" value=""/>
+                                </div>
+								<div class="form-group col-md-6">
+									<label for="last-name">Last Name</label>
+									<input type="text" id="last-name" class="form-control" value=""/>
+                            </div>
+							</div>
+							<div class="form-row">
+								<div class="form-group col-md-6">
+									<label for="city-name">City</label>
+									<input type="text" id="city-name" class="form-control" value=""/>
+                            </div>
+                                <div class="form-group col-md-3">
+                                    <label for="inputState">State</label>
+                                    <select id="inputState" class="form-control">
+                                        <option selected>Choose...</option>
+                                        <option>Spain</option>
+                                        <option>Italy</option>
+                                        <option>Murcia</option>
+                                    </select>
+                                </div>
+								<div class="form-group col-md-3">
+									<label for="postal-code">Postal Code</label>
+									<input type="number" id="postal-code" class="form-control" value=""/>
+                                </div>
+							</div>
+							<div class="form-row">
+								<div class="form col-4">
+									<label for="inputCARD">We accept:</label>
+										<div class="form-row border justify-content-around rounded p-1 ml-1 bg-secondary text-white">
+										    <div class="form-check ml-2">
+												<input class="form-check-input" type="radio" name="exampleRadios" id="inputCARDapple" value="option1" checked/>
+                                                <label class="form-check-label" for="inputCARDapple">
+                                                    <i class="fab fa-cc-apple-pay"></i>
+                                                </label>
+                                            </div>
+											<div class="form-check ml-2">
+												<input class="form-check-input" type="radio" name="exampleRadios" id="inputCARDvisa" value="option1" checked/>
+												<label class="form-check-label" for="inputCARDvisa">
+                                                    <i class="fab fa-cc-visa"></i>
+                                                </label>
+											</div>
+											<div class="form-check ml-2">
+												<input class="form-check-input" type="radio" name="exampleRadios" id="inputCARDmaster" value="option1" checked/>
+												<label class="form-check-label" for="inputCARDmaster">
+                                                    <i class="fab fa-cc-mastercard"></i>
+                                                </label>
+											</div>
+											<div class="form-check ml-2 mr-2">
+												<input class="form-check-input" type="radio" name="exampleRadios" id="inputCARDamex" value="option1" checked/>
+											    <label class="form-check-label" for="inputCARDamex">
+                                                    <i class="fab fa-cc-amex"></i>
+                                                </label>
+											</div>
+										</div>
+									</div>
+                                <div class="form col-6 offset-2">
+                                    <label for="exampleFormControlTextarea1">Message</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <small class="form-text text-muted">Add any notes here.</small>
+                                </div>
+						    </div>
+						</div>
+								<!-- Send and Cancel Buttons -->
+						<div class="card-footer">
+							<div class="row justify-content-end mr-0">
+								<button type="reset" class="btn btn-secondary m-1" id="form-submit">Cancel</button>
+								<button type="submit" class="btn btn-primary" id="submit">Send</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</form>
+	</div>
+                                <!-- Optional JavaScript -->
+                    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
+</body>
 
-    <link rel="shortcut icon" href="./4geeks.ico" />
-    <script src="./js/index.js"></script>
-  </head>
-  <body>
-    <div class="container-fluid text-center">
-      <form id="form-submit">
-        <div class="row justify-content-center">
-          <div class="column">
-            <div class="card m-5" style="width: 45rem; height: auto">
-              <div class="card-header">
-                <h3>Payment for example</h3>
-              </div>
-              <!-- Principal body -->
-              <div class="card-body">
-                <!-- Alert! -->
-                <div
-                  class="alert alert-danger"
-                  role="alert"
-                  style="display: none"
-                  id="error"
-                >
-                  Some fields are missing! Check it out all the fields
-                </div>
-                <div
-                  class="alert alert-success"
-                  role="alert"
-                  style="display: none"
-                  id="success"
-                >
-                  Completed!
-                </div>
-                <!-- Forms -->
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="cardNumber">CARD #</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="cardNumber"
-                      placeholder="0000 0000 0000 0000"
-                      maxlength="16"
-                      minlength="16"
-                      pattern="[0-9]{16}"
-                      value=""
-                    />
-                  </div>
-                  <div class="form-group col-md-3">
-                    <label>CVC #</label>
-                    <input
-                      type="number"
-                      class="form-control"
-                      id="inputCVV"
-                      placeholder="000"
-                      maxlength="3"
-                      minlength="3"
-                      value=""
-                    />
-                  </div>
-                  <div class="form-group col-md-3">
-                    <label for="inputAmount">Amount</label>
-                    <div class="input-group">
-                      <span class="input-group-addon mr-1"><b>$</b></span>
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="0.00"
-                        id="imputAmount"
-                        pattern="^\d*(\.\d{0,2})?$"
-                        value=""
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="first-name">First Name</label>
-                    <input
-                      type="text"
-                      id="first-name"
-                      class="form-control"
-                      value=""
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="last-name">Last Name</label>
-                    <input
-                      type="text"
-                      id="last-name"
-                      class="form-control"
-                      value=""
-                    />
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <label for="city-name">City</label>
-                    <input
-                      type="text"
-                      id="city-name"
-                      class="form-control"
-                      value=""
-                    />
-                  </div>
-                  <div class="form-group col-md-3">
-                    <label for="inputState">State</label>
-                    <select id="inputState" class="form-control">
-                      <option selected>Choose...</option>
-                      <option>Spain</option>
-                      <option>Italy</option>
-                      <option>Murcia</option>
-                    </select>
-                  </div>
-                  <div class="form-group col-md-3">
-                    <label for="postal-code">Postal Code</label>
-                    <input
-                      type="number"
-                      id="postal-code"
-                      class="form-control"
-                      value=""
-                    />
-                  </div>
-                </div>
-                <div class="form-row">
-                  <div class="form col-4">
-                    <label for="inputCARD">We accept:</label>
-                    <div
-                      class="form-row border justify-content-around rounded p-1 ml-1 bg-secondary text-white"
-                    >
-                      <div class="form-check ml-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="exampleRadios"
-                          id="inputCARDapple"
-                          value="option1"
-                          checked
-                        />
-                        <label class="form-check-label" for="inputCARDapple">
-                          <i class="fab fa-cc-apple-pay"></i>
-                        </label>
-                      </div>
-                      <div class="form-check ml-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="exampleRadios"
-                          id="inputCARDvisa"
-                          value="option1"
-                          checked
-                        />
-                        <label class="form-check-label" for="inputCARDvisa">
-                          <i class="fab fa-cc-visa"></i>
-                        </label>
-                      </div>
-                      <div class="form-check ml-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="exampleRadios"
-                          id="inputCARDmaster"
-                          value="option1"
-                          checked
-                        />
-                        <label class="form-check-label" for="inputCARDmaster">
-                          <i class="fab fa-cc-mastercard"></i>
-                        </label>
-                      </div>
-                      <div class="form-check ml-2 mr-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="exampleRadios"
-                          id="inputCARDamex"
-                          value="option1"
-                          checked
-                        />
-                        <label class="form-check-label" for="inputCARDamex">
-                          <i class="fab fa-cc-amex"></i>
-                        </label>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form col-6 offset-2">
-                    <label for="exampleFormControlTextarea1">Message</label>
-                    <textarea
-                      class="form-control"
-                      id="exampleFormControlTextarea1"
-                      rows="3"
-                    ></textarea>
-                    <small class="form-text text-muted"
-                      >Add any notes here.
-                    </small>
-                  </div>
-                </div>
-              </div>
-              <!-- Send and Cancel Buttons -->
-              <div class="card-footer">
-                <div class="row justify-content-end mr-0">
-                  <button
-                    type="reset"
-                    class="btn btn-secondary m-1"
-                    id="form-submit"
-                  >
-                    Cancel
-                  </button>
-                  <button type="submit" class="btn btn-primary" id="submit">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
