--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <form id="form-submit" class="needs-validation" novalidate>
+      <form>
         <div class="row justify-content-center">
           <div class="column">
             <div class="card m-5" style="width: 45rem; height: auto">
