project with HTML and JS

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm">
-              One of three columns
+              <h1 id="palo-cabecera"></h1>
             </div>
             <div class="col-sm">
               One of three columns
