--- a/src/index.html
+++ b/src/index.html
@@ -24,32 +24,18 @@
       <div class="card bg-success" style="width: 18rem;">
         <div class="container">
           <div class="row">
-            <div class="col-sm">
-              <h1 id="palo-cabecera"></h1>
+            <div class="col-3">
+              1 of 3
             </div>
-            <div class="col-sm">
-              One of three columns
+          </div>
+          <div class="row">
+            <div class="col-6 offset-3">
+              1 of 3
             </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
+          </div>
+          <div class="row">
+            <div class="col-3 offset-9">
+              1 of 3
             </div>
           </div>
         </div>
