--- a/src/index.html
+++ b/src/index.html
@@ -25,17 +25,17 @@
         <div class="container">
           <div class="row">
             <div class="col-3">
-              1 of 3
+              <h4 id="pagina-palo"></h4>
             </div>
           </div>
           <div class="row">
             <div class="col-6 offset-3">
-              1 of 3
+              <h1 id="numero"></h1>
             </div>
           </div>
           <div class="row">
             <div class="col-3 offset-9">
-              1 of 3
+              <h4 id="pagina-palo"></h4>
             </div>
           </div>
         </div>
